--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -11,8 +11,133 @@ body {
     text-align: left;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: #1F643E;
+}
+
+a:hover {
+    color: #1F643E;
+}
+
 .body {
     margin: 0 auto;
     width: 70%;
     clear: both;
+}
+
+.mainHeader img {
+    width: 30%;
+    height: auto;
+    margin: 2% 0;
+}
+
+.mainHeader nav {
+    background-color: #7D7D81;
+    height: 40px;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;    
+}
+
+.mainHeader nav ul {
+    list-style: none;
+    margin: 0 auto;
+}
+
+.mainHeader nav ul li {
+    display: inline;
+}
+
+.mainHeader nav a:link, .mainHeader nav a:visited {
+    color: #FFF;
+    display: inline-block;
+    padding: 10px 25px;
+    height: 20px;
+}
+
+.mainHeader nav a:hover, .mainHeader nav a:active, .mainHeader nav .active a:link, .mainHeader nav a:visited {
+    background-color: #1F643E;
+    text-shadow: none;
+}
+
+.mainHeader nav ul li a {
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+}
+
+.mainContent {
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    line-height: 25px;
+}
+
+.content {
+    width: 70%;
+    float: left;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    background-color: #FFF;
+    padding: 3% 5%;
+    margin-top: 2px;
+}
+
+.metadata {
+    font-style: italic;
+    color: #D1D1D1;
+}
+
+.top-sidebar {
+    width: 25px;
+    float: left;
+    background-color: #FFF;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    margin: 2% 0 2% 3%;
+    padding: 2% 3%;
+}
+
+.middle-sidebar {
+    width: 25px;
+    float: left;
+    background-color: #FFF;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    margin: 2% 0 2% 3%;
+    padding: 2% 3%;
+}
+
+.bottom-sidebar {
+    width: 25px;
+    float: left;
+    background-color: #FFF;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    margin: 2% 0 2% 3%;
+    padding: 2% 3%;
+}
+
+.mainFooter {
+    width: 100%;
+    float: left;
+    height: 40px;
+    border-radius: 5px;
+    -moz-border-radius: 5px; 
+    -webkit-border-radius: 5px;
+    background-color: #7D7D81;
+    margin: 2% 0;
+}
+
+.mainFooter p {
+    margin: 10% auto;
+    width: 92%;
 }
