Changed background color

--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial, 'Lucida Sans Unicode';
     line-height: 1.5;
     text-align: left;
+    background-color: #7D7D81;
 }
 
 a {
