--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -35,7 +35,8 @@ a:hover {
     height: 40px;
     border-radius: 5px;
     -moz-border-radius: 5px; 
-    -webkit-border-radius: 5px;    
+    -webkit-border-radius: 5px;
+    margin: 2% auto;    
 }
 
 .mainHeader nav ul {
@@ -83,7 +84,6 @@ a:hover {
     -webkit-border-radius: 5px;
     background-color: #FFF;
     padding: 3% 5%;
-    margin-top: 2px;
 }
 
 .secondArt {
@@ -92,7 +92,7 @@ a:hover {
     -webkit-border-radius: 5px;
     background-color: #FFF;
     padding: 3% 5%;
-    margin-top: 2px;
+    margin-top: 2%;
 }
 
 .metadata {
@@ -108,7 +108,7 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 3%;
+    padding: 2% 0 3% 3%;
 }
 
 .middle-sidebar {
@@ -119,7 +119,7 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 3%;
+    padding: 2% 0 3% 3%;
 }
 
 .bottom-sidebar {
@@ -130,7 +130,7 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 3%;
+    padding: 2% 0 3% 3%;
 }
 
 .mainFooter {
