--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -36,7 +36,8 @@ a:hover {
     border-radius: 5px;
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
-    margin: 2% auto;    
+    margin: 2% auto;
+    position: fixed;    
 }
 
 .mainHeader nav ul {
@@ -83,7 +84,7 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     background-color: #FFF;
-    padding: 3% 5%;
+    padding: 1% 5%;
 }
 
 .secondArt {
@@ -91,13 +92,8 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     background-color: #FFF;
-    padding: 3% 5%;
+    padding: 1% 5%;
     margin-top: 2%;
-}
-
-.metadata {
-    font-style: italic;
-    color: #D1D1D1;
 }
 
 .top-sidebar {
@@ -108,7 +104,6 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 0 3% 3%;
 }
 
 .middle-sidebar {
@@ -119,7 +114,6 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 0 3% 3%;
 }
 
 .bottom-sidebar {
@@ -130,7 +124,6 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 2% 0 2% 3%;
-    padding: 2% 0 3% 3%;
 }
 
 .mainFooter {
@@ -145,6 +138,6 @@ a:hover {
 }
 
 .mainFooter a {
-    margin: 2% auto;
+    margin: 2% 3%;
     width: 92%;
 }
