--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -109,6 +109,7 @@ a:hover {
 .top-sidebar a img {
     height: 100%;
     width: 100%;
+    vertical-align: top;
     object-fit: contain;
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -129,6 +130,7 @@ a:hover {
 .middle-sidebar a img {
     height: 100%;
     width: 100%;
+    vertical-align: top;   
     object-fit: contain;    
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -149,6 +151,7 @@ a:hover {
 .bottom-sidebar a img {
     height: 100%;
     width: 100%;
+    vertical-align: top;
     object-fit: contain;    
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -168,5 +171,5 @@ a:hover {
 
 .mainFooter p {
     margin: 2% 3%;
-    width: 92%;
+    display: inline;
 }
