--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -109,7 +109,7 @@ a:hover {
 .top-sidebar a img {
     height: 100%;
     width: 100%;
-    vertical-align: top;
+    vertical-align: bottom;
     object-fit: fill;
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -130,7 +130,7 @@ a:hover {
 .middle-sidebar a img {
     height: 100%;
     width: 100%;
-    vertical-align: top;   
+    vertical-align: bottom;   
     object-fit: fill;    
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -151,7 +151,7 @@ a:hover {
 .bottom-sidebar a img {
     height: 100%;
     width: 100%;
-    vertical-align: top;
+    vertical-align: bottom;
     object-fit: fill;    
     border-radius: 5px;
     -moz-border-radius: 5px; 
@@ -172,5 +172,5 @@ a:hover {
 .mainFooter p {
     margin: 2% 3%;
     display: inline;
-    padding: 10px;
+    padding: 5px 0 5px 0;
 }
