more image sizing

--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -96,8 +96,8 @@ a:hover {
 }
 
 .top-sidebar {
-    max-height: 100px;
-    max-width: 27%;
+    height: 10%;
+    width: 27%;
     float: left;
     background-color: #FFF;
     border-radius: 5px;
@@ -107,8 +107,8 @@ a:hover {
 }
 
 .top-sidebar a img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     vertical-align: bottom;
     object-fit: cover;
     border-radius: 5px;
@@ -117,8 +117,8 @@ a:hover {
 }
 
 .middle-sidebar {
-    max-height: 100px;
-    max-width: 27%;
+    height: 10%;
+    width: 27%;
     float: left;
     background-color: #FFF;
     border-radius: 5px;
@@ -128,8 +128,8 @@ a:hover {
 }
 
 .middle-sidebar a img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     vertical-align: bottom;   
     object-fit: cover;    
     border-radius: 5px;
@@ -138,8 +138,8 @@ a:hover {
 }
 
 .bottom-sidebar {
-    max-height: 100px;
-    max-width: 27%;
+    height: 10%;
+    width: 27%;
     float: left;
     background-color: #FFF;
     border-radius: 5px;
@@ -149,8 +149,8 @@ a:hover {
 }
 
 .bottom-sidebar a img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
     border-radius: 5px;
@@ -159,8 +159,8 @@ a:hover {
 }
 
 .subbottom-sidebar {
-    max-height: 100px;
-    max-width: 27%;
+    height: 10%;
+    width: 27%;
     float: left;
     background-color: #FFF;
     border-radius: 5px;
@@ -170,8 +170,8 @@ a:hover {
 }
 
 .subbottom-sidebar a img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
     border-radius: 5px;
