--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -108,7 +108,7 @@ a:hover {
 
 .top-sidebar a img {
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
     vertical-align: bottom;
     object-fit: cover;
     border-radius: 5px;
@@ -129,7 +129,7 @@ a:hover {
 
 .middle-sidebar a img {
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
     vertical-align: bottom;   
     object-fit: cover;    
     border-radius: 5px;
@@ -150,7 +150,7 @@ a:hover {
 
 .bottom-sidebar a img {
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
     border-radius: 5px;
@@ -171,7 +171,7 @@ a:hover {
 
 .subbottom-sidebar a img {
     max-height: 100%;
-    max-width: 100%;
+    width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
     border-radius: 5px;
