--- a/WebpageStyle.css
+++ b/WebpageStyle.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, 'Lucida Sans Unicode';
     line-height: 1.5;
     text-align: left;
-    background-color: #D0D0D1;
+    background-color: #efefef;
 }
 
 a {
@@ -79,20 +79,22 @@ a:hover {
 }
 
 .firstArt {
-    border-radius: 5px;
-    -moz-border-radius: 5px; 
-    -webkit-border-radius: 5px;
+    border-radius: 0;
+    -moz-border-radius: 0; 
+    -webkit-border-radius: 0;
     background-color: #FFF;
     padding: 1% 5%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .secondArt {
-    border-radius: 5px;
-    -moz-border-radius: 5px; 
-    -webkit-border-radius: 5px;
+    border-radius: 0;
+    -moz-border-radius: 0; 
+    -webkit-border-radius: 0;
     background-color: #FFF;
     padding: 1% 5%;
     margin-top: 2%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .top-sidebar {
@@ -104,10 +106,11 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 0 0 2% 3%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .top-sidebar a img {
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     vertical-align: bottom;
     object-fit: cover;
@@ -125,10 +128,11 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 0 0 2% 3%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .middle-sidebar a img {
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     vertical-align: bottom;   
     object-fit: cover;    
@@ -146,10 +150,11 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 0 0 2% 3%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .bottom-sidebar a img {
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
@@ -167,10 +172,11 @@ a:hover {
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px;
     margin: 0 0 2% 3%;
+    box-shadow: 0 2px 7px 0 rgba(0,0,0,.16), 0 0 2px 0 rgba(0,0,0,.12);
 }
 
 .subbottom-sidebar a img {
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     vertical-align: bottom;
     object-fit: cover;    
@@ -188,9 +194,69 @@ a:hover {
     -webkit-border-radius: 5px;
     background-color: #7D7D81;
     margin: 2% 0;
+    display: table;
 }
 
 .mainFooter address {
     width: 92%;
-    margin: 1% auto;
+    padding-left: 20px;
+    display: table-cell;
+    vertical-align: middle;
+    font-style: normal;
+    color: #FFF;
+}
+
+@media only screen and (min-width: 200px) and (max-width: 800px) {
+    .body {
+        width: 90%;
+    }
+
+    .mainHeader nav {
+        height: 160px;   
+    }
+    
+    .mainHeader nav ul {
+        padding-left: 0;
+    }
+    
+    .mainHeader nav ul li {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .mainHeader nav a:link, .mainHeader nav a:visited {
+        padding: 10px 25px;
+        height: 20px;
+        display: block;
+    }
+    
+    .content {
+        width: 100%;
+        float: left;
+        margin-top: 2%;
+    }
+
+    .top-sidebar {
+        height: 100px;
+        width: 100%;
+        margin: 0 0 2% 0;
+    }
+    
+    .middle-sidebar {
+        height: 100px;
+        width: 100%;
+        margin: 0 0 2% 0;
+    }
+    
+    .bottom-sidebar {
+        height: 100px;
+        width: 100%;
+        margin: 0 0 2% 0;
+    }
+    
+    .subbottom-sidebar {
+        height: 100px;
+        width: 100%;
+        margin: 0 0 2% 0;
+    }
 }
